k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pythoughts-api
  namespace: pythoughts
  labels:
    app.kubernetes.io/name: pythoughts
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: pythoughts
    app.kubernetes.io/component: api
---
apiVersion: v1
kind: Service
metadata:
  name: pythoughts-api-headless
  namespace: pythoughts
  labels:
    app.kubernetes.io/name: pythoughts
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: pythoughts
    app.kubernetes.io/component: api
